--- a/readme
+++ b/readme
@@ -1,3 +1,3 @@
-hello. This is quite cool.
+``You ``are 1122133rrgtrhtrajnhon master hello. This not quite cool.
 
 This project helps Treehouse Students learn GIT
